--- a/views/includes/nav.ejs
+++ b/views/includes/nav.ejs
@@ -12,13 +12,14 @@
             <li class="<%= path === '/ta02' ? 'active' : ''%>"><a href="/ta02">TA02</a></li>
             <li class="<%= path === '/ta03' ? 'active' : ''%>"><a href="/ta03">TA03</a></li>
             <li class="<%= path === '/ta04' ? 'active' : ''%>"><a href="/ta04">TA04</a></li>
+            <li class="<%= path === '/ta04' ? 'active' : ''%>"><a href="/ta05">TA05</a></li>
           </ul>
       </li>
       <li class="dropdown">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"> Prove Assignments <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
             <li class="<%= path === '/prove04' ? 'active' : ''%>"><a href="/prove04">prove04</a></li>
-
+            <li class="<%= path === '/prove05' ? 'active' : ''%>"><a href="/prove05">prove05</a></li>
           </ul>
       </li>
     </ul>
