--- a/views/includes/nav.ejs
+++ b/views/includes/nav.ejs
@@ -20,6 +20,7 @@
           <ul class="dropdown-menu" role="menu">
             <li class="<%= path === '/prove04' ? 'active' : ''%>"><a href="/prove04">prove04</a></li>
             <li class="<%= path === '/prove05' ? 'active' : ''%>"><a href="/prove05">prove05</a></li>
+            <li class="<%= path === '/prove08' ? 'active' : ''%>"><a href="/prove08">prove08</a></li>
           </ul>
       </li>
     </ul>
