--- a/views/pages/pr12-chat.ejs
+++ b/views/pages/pr12-chat.ejs
@@ -2,11 +2,10 @@
 <% include ../includes/header.ejs %>
 <link href="/css/pr12.css" rel="stylesheet" type="text/css" />
 </head>
-
 <body>
     <% include ../includes/nav.ejs %>
     <div class="container">
-        <h1>Live chat:</h1>
+        <h1>Da Live Chat:</h1>
         <ul id="chatBox" class="chat">
         </ul>
     </div>
@@ -21,7 +20,6 @@
     <p>No login, view only.</p>
     <% } %>
 </body>
-
 </html>
 <script src="/socket.io/socket.io.js"></script>
 <script src="/js/pr12-chat.js"></script>
